--- a/mart/src/App.css
+++ b/mart/src/App.css
@@ -80,3 +80,56 @@
 .left0{
   left: 0; 
 }
+
+.profilePageIcons{
+  height: 20px;
+  width: 20px;
+}
+
+.ScrollStyle
+{
+    max-height: 100vh;
+    overflow-y: scroll;
+}
+
+.productImg{
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.productDetailsButton{
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.productCard :hover .productImg{
+  opacity: 0.3;
+}
+
+.productCard :hover .productDetailsButton{
+  opacity: 1;
+}
+
+.input {
+  border: 0;
+  outline: 0;
+  background: transparent;
+  border-bottom: 2px solid black;
+  background-color: #fff;
+  transition: 180ms box-shadow ease-in-out;
+}
+
+.input:focus {
+  outline: 3px solid transparent;
+}
+
